--- a/.github/workflows/management-account-plan.yml
+++ b/.github/workflows/management-account-plan.yml
@@ -37,10 +37,9 @@ jobs:
 
       - name: Terraform plan
         id: plan
-        run: terraform plan -detailed-exitcode -out "${RUNNER_TEMP}/tfplan"
-
-      - name: Show Redacted Terraform plan
-        run: echo $RUNNER_TEMP/tfplan | ../../scripts/redaction.sh
+        run: |
+          set -o pipefail
+          terraform plan -detailed-exitcode -out "${RUNNER_TEMP}/tfplan" | ../../scripts/redaction.sh
 
       - name: Alert Slack if drift detected on scheduled run
         if: ${{ (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || github.event_name == 'pull_request') && steps.plan.outputs.exitcode == '2' }}
